# sn-ai-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/api/: api.py
app/core/: config.py
app/services/: pdf_parser.py
